# Anti-Ghost-Ping

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.env.example  docker-compose.yml  sqlx-data.json
.github/workflows/: ci.yml  docker-image.yml
migrations/: 20220413202851_init.sql
src/: commands.rs  context.rs  main.rs  structs.rs
src/commands/: etoggle.rs  info.rs  mentiononly.rs  mod.rs  redirect.rs  setcolor.rs
src/events/: guild.rs  interaction.rs  message.rs  mod.rs
src/helpers/: api.rs  color.rs  database.rs  embed.rs  macros.rs  message.rs  mod.rs
src/structures/: bot_data.rs  mod.rs
