[package]
name = "anti_ghost_ping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.19"
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.3.3"
twilight-cache-inmemory = "0.10.1"
twilight-gateway = "0.10.1"
twilight-http = "0.10.1"
twilight-model = "0.10.1"

[dependencies.twilight-util]
version = "0.10.1"
features = ["builder"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread", "signal"]

[dependencies.sqlx]
version = "0.5.9"
default-features = false
features = ["runtime-tokio-native-tls", "postgres", "macros", "offline"]