[package]
name = "anti_ghost_ping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.19"
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.3.3"
twilight-cache-inmemory = "0.11.0"
twilight-gateway = "0.11.0"
twilight-http = "0.11.0"
twilight-model = "0.11.0"
rand = "0.8.5"
anyhow = "1.0.57"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.10", features = ["json"] }
num-format = "0.4.0"

[dependencies.twilight-util]
version = "0.11.0"
features = ["builder"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread", "signal"]

[dependencies.sqlx]
version = "0.6.0"
default-features = false
features = ["runtime-tokio-native-tls", "postgres", "macros", "offline"]